clusters/dev/edge/platform/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: observability-basic-auth
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  basicAuth:
    secret: observability-basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  redirectScheme:
    scheme: https
    permanent: true
